# aoc-2021

./: .envrc  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
benches/: bench.rs
src/: lib.rs  run.rs  runner.rs  utils.rs
src/day01/: input.txt  mod.rs
src/day02/: input.txt  mod.rs
src/day03/: mod.rs
src/day04/: input.txt  mod.rs
src/day05/: input.txt  mod.rs  part1.rs  part2.rs  projection.rs
src/day06/: mod.rs
src/day07/: input.txt  mod.rs
src/day08/: mod.rs
src/day09/: input.txt  mod.rs
src/day10/: input.txt  mod.rs
src/day11/: input.txt  mod.rs
src/day12/: mod.rs
src/day13/: input.txt  mod.rs
src/day14/: input.txt  mod.rs
src/day15/: mod.rs
src/day16/: mod.rs
src/day17/: input.txt  mod.rs
src/day18/: input.txt  mod.rs
src/day19/: mod.rs
src/day20/: input.txt  mod.rs
src/day21/: input.txt  mod.rs
src/day22/: graph.rs  input.txt  mod.rs
src/day23/: input.txt  input_hardest.txt  mod.rs  tests.txt
src/day24/: input.txt  mod.rs  pattern.txt
src/day25/: input.txt  mod.rs
