[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Ivan Smirnov <rust@ivan.smirnov.ie>"]
edition = "2021"
default-run = "runner"

[dependencies]
arrayvec = "0.7"
memchr = "2.4"
core_simd = { git = "https://github.com/rust-lang/portable-simd.git" }
structopt = "0.3"
eyre = "0.6"
ahash = "0.7"
num-integer = "0.1"
rayon = "1.5"
petgraph = "0.6"

[profile.release]
#codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
name = "aoc2021"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "runner"
path = "src/runner.rs"
test = false
